--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,5 +1,11 @@
-<div>
-  <div class="col-sm-2"><%= review.rating %></div>
-  <div class="col-sm-2"><%= review.description %></div>
-  <div class="col-sm-2"><%= review.created_at %></div>
-</div>
+
+<td><%= review.rating %></td>
+<td><%= review.description %></td>
+<td><%= review.created_at.to_formatted_s(:long)  %></td>
+
+
+<td><% if review.user_id = current_user.id%>
+  <%= link_to fa_icon('trash'), [@product, review], class: 'btn btn-sm btn-danger', method: :delete, data: { confirm: "Are you sure?" } %>
+<% end %>
+</td>
+
